Updated readme and update version number

--- a/coaching-tree/package.json
+++ b/coaching-tree/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coaching-tree",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
