--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "background_color": "#1f2937",
+    "theme_color": "#1f2937"
 }
