--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,11 @@
     "name": "Coach Builder",
     "icons": [
         {
+            "src": "favicon.ico",
+            "sizes": "64x64 32x32 24x24 16x16",
+            "type": "image/x-icon"
+        },
+        {
             "src": "26thumb.png",
             "sizes": "48x48",
             "type": "image/png"
