Update homepage property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nanorossi.github.io/CFB-Coach-Builder",
+  "homepage": "https://www.cfb-coach-builder.com/",
   "name": "coaching-tree",
   "version": "1.0.0",
   "dependencies": {
